# simURLDrop

./: CMakeLists.txt
addOns/: URL drop service.lua
sourceCode/: callbacks.xml  plugin.cpp
